# HW_28-29

./: pyproject.toml  test.py
posts/: admin.py  history.py  middleware.py  models.py  service.py  views.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_note_image.py  0003_alter_note_image.py  0004_alter_note_image.py  0005_alter_note_image.py  0006_note_created_at_index.py  0007_tag_note_tags.py
project/: settings.py  urls.py
templates/: menu.html  posts-list.html  profile.html
